<resources>
    <string name="app_name">QA</string>
    <string name="action_settings">Settings</string>
    <string name="q_a"><![CDATA[Q&A]]></string>

    <!-- Share -->
    <string name="invitation_title"><![CDATA[Share Q&A]]></string>
    <string name="invitation_message">This App is so great! I just got the answer of my perplexity! Give it try!</string>
    <string name="invitation_deep_link_domain">https://qanda.jp.com/%1$s</string>
    <string name="invitation_custom_image">https://lh3.googleusercontent.com/ZjphTiIue8xgTcxRZISvVP6xBzXYNDxPVRwowDg0TPreu5cuIZf1c6WOnWAl-DR3GxQ=w300-rw</string>
    <string name="invitation_action_call">Try it!</string>
    <string name="invitation_failed">Oops! The sharing is failed :(</string>
    <!--<string name="invitation_successful">Great! Thanks for your sharing!</string>-->
    <!--<string name="invitation_google_api_init_failed">![CDATA[Oops! We may not handle your friend's invitation at this time. Apologize!]]</string>-->


    <!-- splash -->
    <string name="sign_in_failed">Sign in Failed!</string>
    <string name="try_again">Try again</string>
    <string name="offline_message">Oops! You are running offline!</string>
    <string name="offline_message_dismiss"><u>Dismiss</u></string>
    
    <!-- user list -->
    <string name="follow">Follow</string>
    <string name="user_answer_desc">%1$d answers&#160;&#160;</string>
    <string name="user_followers_count">%1$d people followed</string>
    <string name="user_secret_listening_count">%1$d people listened</string>

    <!-- user detail -->
    <string name="ask_hint">Ask question. If there is no response beyond 48 hrs, you will get full refund!</string>
    <string name="user_detail_title">Ask %1$s</string>
    <string name="user_quest_fee">$%1$s</string>

    <!-- Me profile -->
    <string name="my_questions">My Questions</string>
    <string name="my_answers">My Answers</string>
    <string name="my_secret_listening">My Listening</string>
    <string name="my_quest_fee_desc">Asking me question need to pay $</string>
    <string name="my_quest_fee">%1$.2f</string>
    <string name="my_total_revenue">Total revenue $%1$.2f</string>
    <string name="my_profile_name_hint">Your name</string>
    <string name="my_profile_title_hint">Your title</string>
    <string name="my_profile_summary_hint">Say something...</string>

    <!-- QuestionAnswer detail -->
    <string name="question_asked">asked</string>
    <string name="question_answered">answered</string>
    <string name="question_answer_one_dollar_listen">$%1$.2f to listen</string>
    <string name="question_title">Question</string>
    <string name="question_permission_audio_rationale">Audio permission is needed to answer the question.</string>
    <string name="question_answer_content_length_unit">\"</string>
    <string name="question_free_listen">Limited free listen</string>
</resources>
