<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorSecondary"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColorPrimary"
                android:orientation="vertical"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingBottom="20dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userAvatar"
                    android:layout_width="@dimen/avatarWidth"
                    android:layout_height="@dimen/avatarHeight"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/mePanelPadding"
                    android:src="@drawable/ic_account_circle_black_36dp" />

                <com.jp.editabletextview.EditableTextView
                    android:id="@+id/userNameTv"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:ettEmptyColor="@color/textColorSecondary"
                    app:ettEmptyText="@string/my_profile_name_hint"
                    app:ettMaxEms="10"
                    app:ettMaxLines="1"
                    app:ettShowHint="true"
                    app:ettTextColor="@color/textColorSecondary"
                    app:ettTextSize="@dimen/textSizePrimary" />

                <com.jp.editabletextview.EditableTextView
                    android:id="@+id/userTitleTv"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:ettEmptyColor="@color/textColorSecondary"
                    app:ettEmptyText="@string/my_profile_title_hint"
                    app:ettMaxEms="20"
                    app:ettMaxLines="1"
                    app:ettShowHint="true"
                    app:ettTextColor="@color/textColorSecondary"
                    app:ettTextSize="@dimen/textSizePrimary" />

                <com.jp.editabletextview.EditableTextView
                    android:id="@+id/userSummaryTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/mePanelPadding"
                    app:ettEmptyColor="@color/textColorSecondary"
                    app:ettEmptyText="@string/my_profile_summary_hint"
                    app:ettMaxEms="100"
                    app:ettMaxLines="4"
                    app:ettShowHint="true"
                    app:ettTextColor="@color/textColorSecondary"
                    app:ettTextSize="@dimen/textSizePrimary" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/questFeeDescTv"
                        style="@style/TextAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_quest_fee_desc" />

                    <com.jp.editabletextview.EditableTextView
                        android:id="@+id/questFeeTv"
                        style="@style/TextAppearanceMedium"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        app:ettEmptyColor="@color/textColorSecondary"
                        app:ettEmptyText="@string/my_profile_title_hint"
                        app:ettMaxEms="10"
                        app:ettMaxLines="1"
                        app:ettShowHint="true"
                        app:ettTextColor="@color/textColorSecondary"
                        app:ettTextSize="@dimen/textSizePrimary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/userFollowerTv"
                        style="@style/TextAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/userTotalRevenueTv"
                        style="@style/TextAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <LinearLayout
                android:id="@+id/myQuestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColorPrimary"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:src="@drawable/ic_question" />

                <TextView
                    style="@style/TextAppearanceNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_questions" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/backgroundColorSecondary" />

            <LinearLayout
                android:id="@+id/myAnswers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColorPrimary"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:src="@drawable/ic_my_answer" />

                <TextView
                    style="@style/TextAppearanceNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_answers" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/backgroundColorSecondary" />

            <LinearLayout
                android:id="@+id/myListening"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColorPrimary"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:src="@drawable/ic_star" />

                <TextView
                    style="@style/TextAppearanceNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_secret_listening" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                android:id="@+id/logout"
                style="@style/TextAppearanceNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColorPrimary"
                android:gravity="center"
                android:padding="@dimen/titleBarPadding"
                android:text="Logout"
                android:textColor="@color/textColorOrange" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>